final initial push

--- a/problems/fa24-final/q01.md
+++ b/problems/fa24-final/q01.md
@@ -8,6 +8,22 @@ Fill in the blank below with an expression that evaluates to the
 **proportion** of products in `skin` that are expensive.
 
 # BEGIN SOLUTION
+**Answer**:  
+`np.mean(skin['Price'] >= 100)` or equivalent expressions such as `skin['Price'].ge(100).mean()` or `(skin['Price'] >= 100).sum() / skin.shape[0]`.
+
+To calculate the proportion of products in `skin` that are expensive (price at least 100), we first evaluate the condition `skin['Price'] >= 100`. This generates a Boolean series where:
+
+- Each `True` represents a product with a price greater than or equal to 100.
+
+- Each `False` represents a product with a price below 100.
+
+When we call `np.mean` on this Boolean series, Python internally treats `True` as 1 and `False` as 0. The mean of this series therefore gives the proportion of `True` values, which corresponds to the proportion of products that meet the "expensive" criteria.
+
+Alternatively, we can:
+1. Count the total number of "expensive" products using `(skin['Price'] >= 100).sum()`.
+2. Divide this count by the total number of products in the dataset (`skin.shape[0]`).
+
+Both approaches yield the same result.
 
 # END SOLUTION
 
@@ -18,35 +34,44 @@ Fill in the blank below with an expression that evaluates to the
 Fill in the blanks so that the expression below evaluates to the number
 of brands that sell **fewer than 5** expensive products.
 
-
     skin.groupby(__(i)__).__(ii)__(__(iii)__)["Brand"].nunique()
 
 `(i)`:
 
-( ) `"Brand"` ( ) `"Name"` ( ) `"Price"` ( ) `["Brand", "Price"]`
+( ) `"Brand"`
+( ) `"Name"`
+( ) `"Price"`
+( ) `["Brand", "Price"]`
 
 `(ii)`:
 
 ( ) `agg`
-
 ( ) `count`
-
 ( ) `filter`
-
 ( ) `value_counts`
 
-`(iii)`:
-
-# BEGIN SOLUTION
-
-# END SOLUTION
-
-# END SUBPROB
-
-Fill in the blanks so that the expression below *also* evaluates to the
+`(iii)`: Fill in the blanks so that the expression below *also* evaluates to the
 number of brands that sell at least 5 expensive products.
 
 # BEGIN SOLUTION
+
+**Answer**:  
+`(i)`: `"Brand"`  
+`(ii)`: `filter`  
+`(iii)`: `lambda x: (x['Price'] >= 100).sum() < 5`
+
+The expression filters the grouped DataFrame to include only groups where the number of expensive products (those costing at least $100) is fewer than 5. Here's how the expression works:
+
+1. **`groupby('Brand')`**: Groups the `skin` DataFrame by the unique values in the `"Brand"` column, creating subgroups for each brand. Now, when we apply the next step, it will perform the action on each `Brand` group. 
+2. **`filter`**: We use **`filter`** instead of **`agg`** (or other options) because **`filter`** is designed to evaluate a condition on the entire group and decide whether to include or exclude the group in the final result. In this case, we want to include only groups (brands) where the number of expensive products is fewer than 5. 
+3. **`(lambda x: (x['Price'] >= 100).sum() < 5)`**: This lambda function runs on each **group** (in this case, x is a dataframe). It calculates the number of products in the group where the price is greater than or equal to $100 (i.e., expensive products). If this count is less than 5, the group is kept. Otherwise, the group is excluded from our final result. 
+
+Since we have an `.nunique()` at the end of our original expression, we will return the **number** (`n` in `nunique`) of unique brands. 
+
+Alternative forms for `(iii)` include:  
+- `lambda x: np.sum(x['Price'] >= 100) < 5`  
+- `lambda x: x[x['Price'] >= 100].shape[0] < 5`  
+- `lambda x: x[x['Price'] >= 100].count() < 5`
 
 # END SOLUTION
 
