--- a/problems/fa24-final/q02.md
+++ b/problems/fa24-final/q02.md
@@ -1,15 +1,15 @@
 # BEGIN PROB
-
-\]
-
 Fill in each blank with **one word** to complete the sentence below.
 
 The SQL keyword for filtering after grouping is \_\_(i)\_\_, and the SQL
 keyword for querying is \_\_(ii)\_\_.
 
-(i): (ii):
-
 # BEGIN SOLUTION
+**Answer**:
+`(i)`: `HAVING`
+`(ii)`: `WHERE`
+
+An important distinction to make for part `(ii)` is that we're asking about the keyword for **querying**. `SELECT` is incorrect, as `SELECT` is for specifying a subset of **columns**, whereas querying is for specifying a subset of **rows**.
 
 # END SOLUTION
 
