--- a/problems/fa24-final/q03.md
+++ b/problems/fa24-final/q03.md
@@ -1,30 +1,41 @@
 # BEGIN PROB
 
-\]
-
 Consider the Series `small_prices` and `vc`, both of which are defined
 below.
 
 
-    small_prices = pd.Series([
-        36, 36, 18, 100, 18, 36, 1, 1, 1, 36]
-    ])
+    small_prices = pd.Series([36, 36, 18, 100, 18, 36, 1, 1, 1, 36])
 
-    vc = small_prices.value_counts().sort_values(ascending=False)
+    vc = small_prices.value_counts().sort_values(ascending=False)`
 
 In each of the parts below, select the value that the provided
 expression evaluates to. If the expression errors, select "Error\".
 
 # BEGIN SUBPROB
 
-(1.5 pts) `vc.iloc[0]`?
+`vc.iloc[0]`?
 
-  ---------- ---------- ----------- ----------- -------------------
-  ( ) `0`    ( ) `1`    ( ) `2`     ( ) `3`     ( ) `4`
-  ( ) `18`   ( ) `36`   ( ) `100`   ( ) Error   ( ) None of these
-  ---------- ---------- ----------- ----------- -------------------
+( ) `0`
+( ) `1`
+( ) `2`
+( ) `3`
+( ) `4`
+( ) `18`
+( ) `36`
+( ) `100`
+( ) `Error`
+( ) `None of these`
 
 # BEGIN SOLUTION
+**Answer**: `4`
+
+`vc` computes the frequency of each value in small_prices, sorts the counts in descending order, and stores the result in vc. The resulting vc will look like this, where `36, 1, 18, 100` are the indices and `4, 3, 2, 1` are the values:
+
+<center><img src="../assets/images/fa24-final/vc.png" width=300></center>
+
+- `iloc[0]` retrieves the **value** at **integer position** 0 in `vc`. Remember that position can be different than index for a Series: for this Series, the indices are `36, 1, 18, 100`, whereas the **integer positions** are `0, 1, 2, 3`.
+- The result is `4`.
+
 
 # END SOLUTION
 
@@ -32,14 +43,28 @@ expression evaluates to. If the expression errors, select "Error\".
 
 # BEGIN SUBPROB
 
-(1.5 pts) `vc.loc[0]`
+`vc.loc[0]`
 
-  ---------- ---------- ----------- ----------- -------------------
-  ( ) `0`    ( ) `1`    ( ) `2`     ( ) `3`     ( ) `4`
-  ( ) `18`   ( ) `36`   ( ) `100`   ( ) Error   ( ) None of these
-  ---------- ---------- ----------- ----------- -------------------
+( ) `0`
+( ) `1`
+( ) `2`
+( ) `3`
+( ) `4`
+( ) `18`
+( ) `36`
+( ) `100`
+( ) `Error`
+( ) `None of these`
 
 # BEGIN SOLUTION
+
+**Answer**: `Error`
+
+<center><img src="../assets/images/fa24-final/vc.png" width=300></center>
+
+- `loc[0]` attempts to retrieve the **value** associated with the **index** `0` in `vc`.
+- Since `vc` has indices `36, 1, 18, 100`, and `0` is not a valid index, this operation results in an error.
+
 
 # END SOLUTION
 
@@ -47,14 +72,26 @@ expression evaluates to. If the expression errors, select "Error\".
 
 # BEGIN SUBPROB
 
-(1.5 pts) `vc.index[0]`
+`vc.index[0]`
 
-  ---------- ---------- ----------- ----------- -------------------
-  ( ) `0`    ( ) `1`    ( ) `2`     ( ) `3`     ( ) `4`
-  ( ) `18`   ( ) `36`   ( ) `100`   ( ) Error   ( ) None of these
-  ---------- ---------- ----------- ----------- -------------------
+( ) `0`
+( ) `1`
+( ) `2`
+( ) `3`
+( ) `4`
+( ) `18`
+( ) `36`
+( ) `100`
+( ) `Error`
+( ) `None of these`
 
 # BEGIN SOLUTION
+
+**Answer**: `36`
+
+<center><img src="../assets/images/fa24-final/vc.png" width=300></center>
+
+- `index[0]` retrieves the first **index** in `vc`, which corresponds to the value `36`.`
 
 # END SOLUTION
 
@@ -62,14 +99,26 @@ expression evaluates to. If the expression errors, select "Error\".
 
 # BEGIN SUBPROB
 
-(1.5 pts) `vc.iloc[1]`
+`vc.iloc[1]`
 
-  ---------- ---------- ----------- ----------- -------------------
-  ( ) `0`    ( ) `1`    ( ) `2`     ( ) `3`     ( ) `4`
-  ( ) `18`   ( ) `36`   ( ) `100`   ( ) Error   ( ) None of these
-  ---------- ---------- ----------- ----------- -------------------
+( ) `0`
+( ) `1`
+( ) `2`
+( ) `3`
+( ) `4`
+( ) `18`
+( ) `36`
+( ) `100`
+( ) `Error`
+( ) `None of these`
 
 # BEGIN SOLUTION
+
+**Answer**: `3`
+
+<center><img src="../assets/images/fa24-final/vc.png" width=300></center>
+
+- `iloc[1]` retrieves the **value** at **integer position** 1 in `vc`, which is `3`. 
 
 # END SOLUTION
 
@@ -77,14 +126,26 @@ expression evaluates to. If the expression errors, select "Error\".
 
 # BEGIN SUBPROB
 
-(1.5 pts) `vc.loc[1]`
+`vc.loc[1]`
 
-  ---------- ---------- ----------- ----------- -------------------
-  ( ) `0`    ( ) `1`    ( ) `2`     ( ) `3`     ( ) `4`
-  ( ) `18`   ( ) `36`   ( ) `100`   ( ) Error   ( ) None of these
-  ---------- ---------- ----------- ----------- -------------------
+( ) `0`
+( ) `1`
+( ) `2`
+( ) `3`
+( ) `4`
+( ) `18`
+( ) `36`
+( ) `100`
+( ) `Error`
+( ) `None of these`
 
 # BEGIN SOLUTION
+**Answer**: `3`
+
+<center><img src="../assets/images/fa24-final/vc.png" width=300></center>
+
+- `loc[1]` retrieves the **value** associated with the **index** `1` in `vc`, which corresponds to the frequency of the value `1` in `small_prices`.
+- The result is `3`.
 
 # END SOLUTION
 
@@ -92,14 +153,26 @@ expression evaluates to. If the expression errors, select "Error\".
 
 # BEGIN SUBPROB
 
-(1.5 pts) `vc.index[1]`
+`vc.index[1]`
 
-  ---------- ---------- ----------- ----------- -------------------
-  ( ) `0`    ( ) `1`    ( ) `2`     ( ) `3`     ( ) `4`
-  ( ) `18`   ( ) `36`   ( ) `100`   ( ) Error   ( ) None of these
-  ---------- ---------- ----------- ----------- -------------------
+( ) `0`
+( ) `1`
+( ) `2`
+( ) `3`
+( ) `4`
+( ) `18`
+( ) `36`
+( ) `100`
+( ) `Error`
+( ) `None of these`
 
 # BEGIN SOLUTION
+**Answer**: `1`
+
+<center><img src="../assets/images/fa24-final/vc.png" width=300></center>
+
+- `index[1]` retrieves the positionally second index in `vc`.
+- The result is `1`.
 
 # END SOLUTION
 
