--- a/problems/fa24-final/q07.md
+++ b/problems/fa24-final/q07.md
@@ -1,7 +1,5 @@
 # BEGIN PROB
 
-\[(13 pts)\]
-
 Consider a dataset of $n$ values, $y_1, y_2, ..., y_n$, all of which are
 **positive**. We want to fit a constant model, $H(x) = h$, to the data.
 
@@ -18,25 +16,40 @@ provided. By "the data\", we are referring to $y_1, y_2, ..., y_n$.
 
 # BEGIN SUBPROB
 
-(1.5 pts) $h_0^*$
+$h_0^*$
 
-+:----------------------------------------------------------------------+:--+
-| ( ) The standard deviation of the data                                |   |
-|                                                                       |   |
-| ( ) The variance of the data                                          |   |
-+-----------------------------------------------------------------------+---+
-| ( ) The mean of the data                                              |   |
-|                                                                       |   |
-| ( ) The median of the data                                            |   |
-+-----------------------------------------------------------------------+---+
-| ( ) The midrange of the data, $\frac{y_\text{min} + y_\text{max}}{2}$ |   |
-|                                                                       |   |
-| ( ) The mode of the data                                              |   |
-+-----------------------------------------------------------------------+---+
-| ( ) None of the above                                                 |   |
-+-----------------------------------------------------------------------+---+
+( ) The standard deviation of the data  
+( ) The variance of the data  
+( ) The mean of the data  
+( ) The median of the data  
+( ) The midrange of the data, $\frac{y_\text{min} + y_\text{max}}{2}$  
+( ) The mode of the data  
+( ) None of the above  
 
 # BEGIN SOLUTION
+**Answer**: The mode of the data
+
+The minimizer of empirical risk for the constant model when using zero-one loss is the mode. 
+# END SOLUTION
+
+# END SUBPROB
+
+# BEGIN SUBPROB
+
+$h_1^*$
+
+( ) The standard deviation of the data  
+( ) The variance of the data  
+( ) The mean of the data  
+( ) The median of the data  
+( ) The midrange of the data, $\frac{y_\text{min} + y_\text{max}}{2}$  
+( ) The mode of the data  
+( ) None of the above  
+
+# BEGIN SOLUTION
+**Answer**: The median of the data 
+
+The minimizer of empirical risk for the constant model when using absolute loss is the median.
 
 # END SOLUTION
 
@@ -44,25 +57,44 @@ provided. By "the data\", we are referring to $y_1, y_2, ..., y_n$.
 
 # BEGIN SUBPROB
 
-(1.5 pts) $h_1^*$
+$R_1(h_1^*)$
 
-+:----------------------------------------------------------------------+:--+
-| ( ) The standard deviation of the data                                |   |
-|                                                                       |   |
-| ( ) The variance of the data                                          |   |
-+-----------------------------------------------------------------------+---+
-| ( ) The mean of the data                                              |   |
-|                                                                       |   |
-| ( ) The median of the data                                            |   |
-+-----------------------------------------------------------------------+---+
-| ( ) The midrange of the data, $\frac{y_\text{min} + y_\text{max}}{2}$ |   |
-|                                                                       |   |
-| ( ) The mode of the data                                              |   |
-+-----------------------------------------------------------------------+---+
-| ( ) None of the above                                                 |   |
-+-----------------------------------------------------------------------+---+
+( ) The standard deviation of the data  
+( ) The variance of the data  
+( ) The mean of the data  
+( ) The median of the data  
+( ) The midrange of the data, $\frac{y_\text{min} + y_\text{max}}{2}$  
+( ) The mode of the data  
+( ) None of the above  
 
 # BEGIN SOLUTION
+**Answer**: None of the above
+
+The minimizer of empirical risk for $R_1(h_1^*)$ is the sum of absolute deviations from the median divided by $n$.
+
+$R_1(h_1^*)$ represents the sum of absolute deviations from the median divided by $n$:
+
+$$R_1(h_1^*) = \frac{1}{n} \sum_{i=1}^n |y_i - h_1^*|$$
+# END SOLUTION
+
+# END SUBPROB
+
+# BEGIN SUBPROB
+
+$h_2^*$
+
+( ) The standard deviation of the data  
+( ) The variance of the data  
+( ) The mean of the data  
+( ) The median of the data  
+( ) The midrange of the data, $\frac{y_\text{min} + y_\text{max}}{2}$  
+( ) The mode of the data  
+( ) None of the above  
+
+# BEGIN SOLUTION
+**Answer**: The mean of the data
+
+The minimizer of empirical risk for the constant model when using squared loss is the mean.
 
 # END SOLUTION
 
@@ -70,77 +102,24 @@ provided. By "the data\", we are referring to $y_1, y_2, ..., y_n$.
 
 # BEGIN SUBPROB
 
-(1.5 pts) $R_1(h_1^*)$
+$R_2(h_2^*)$
 
-+:----------------------------------------------------------------------+:--+
-| ( ) The standard deviation of the data                                |   |
-|                                                                       |   |
-| ( ) The variance of the data                                          |   |
-+-----------------------------------------------------------------------+---+
-| ( ) The mean of the data                                              |   |
-|                                                                       |   |
-| ( ) The median of the data                                            |   |
-+-----------------------------------------------------------------------+---+
-| ( ) The midrange of the data, $\frac{y_\text{min} + y_\text{max}}{2}$ |   |
-|                                                                       |   |
-| ( ) The mode of the data                                              |   |
-+-----------------------------------------------------------------------+---+
-| ( ) None of the above                                                 |   |
-+-----------------------------------------------------------------------+---+
+( ) The standard deviation of the data  
+( ) The variance of the data  
+( ) The mean of the data  
+( ) The median of the data  
+( ) The midrange of the data, $\frac{y_\text{min} + y_\text{max}}{2}$  
+( ) The mode of the data  
+( ) None of the above  
 
 # BEGIN SOLUTION
+**Answer**: The variance of the data
 
-# END SOLUTION
+The minimizer of empirical risk for $R_2(h_2^*)$ is the mean squared error, which is equivalent to the variance of the data when $h_2^*$ equals the mean.
 
-# END SUBPROB
+$R_2(h_2^*)$ represents the mean squared error:
 
-# BEGIN SUBPROB
-
-(1.5 pts) $h_2^*$
-
-+:----------------------------------------------------------------------+:--+
-| ( ) The standard deviation of the data                                |   |
-|                                                                       |   |
-| ( ) The variance of the data                                          |   |
-+-----------------------------------------------------------------------+---+
-| ( ) The mean of the data                                              |   |
-|                                                                       |   |
-| ( ) The median of the data                                            |   |
-+-----------------------------------------------------------------------+---+
-| ( ) The midrange of the data, $\frac{y_\text{min} + y_\text{max}}{2}$ |   |
-|                                                                       |   |
-| ( ) The mode of the data                                              |   |
-+-----------------------------------------------------------------------+---+
-| ( ) None of the above                                                 |   |
-+-----------------------------------------------------------------------+---+
-
-# BEGIN SOLUTION
-
-# END SOLUTION
-
-# END SUBPROB
-
-# BEGIN SUBPROB
-
-(1.5 pts) $R_2(h_2^*)$
-
-+:----------------------------------------------------------------------+:--+
-| ( ) The standard deviation of the data                                |   |
-|                                                                       |   |
-| ( ) The variance of the data                                          |   |
-+-----------------------------------------------------------------------+---+
-| ( ) The mean of the data                                              |   |
-|                                                                       |   |
-| ( ) The median of the data                                            |   |
-+-----------------------------------------------------------------------+---+
-| ( ) The midrange of the data, $\frac{y_\text{min} + y_\text{max}}{2}$ |   |
-|                                                                       |   |
-| ( ) The mode of the data                                              |   |
-+-----------------------------------------------------------------------+---+
-| ( ) None of the above                                                 |   |
-+-----------------------------------------------------------------------+---+
-
-# BEGIN SOLUTION
+$$ R_2(h_2^*) = \frac{1}{n} \sum_{i=1}^n (y_i - h_2^*)^2 $$
 
 # END SOLUTION
 
@@ -153,21 +132,20 @@ $$L_U(y_i, h) = y_i (y_i - h)^2$$
 
 # BEGIN SUBPROB
 
-(1.5 pts) To find $h_\text{U}^*$, suppose we minimize average Ulta loss
+To find $h_\text{U}^*$, suppose we minimize average Ulta loss
 (with no regularization). How does $h_\text{U}^*$ compare to the mean of
 the data, $M$?
 
 ( ) $h_\text{U}^* > M$
-
 ( ) $h_\text{U}^* \geq M$
-
 ( ) $h_\text{U}^* = M$
-
 ( ) $h_\text{U}^* \leq M$
-
 ( ) $h_\text{U}^* < M$
 
 # BEGIN SOLUTION
+**Answer**: $h_\text{U}^* \geq M$
+
+Since we're multiplying by $y_i$, the Ulta loss function skews the optimal prediction higher to reduce the impact of larger $y_i$ values on the loss. 
 
 # END SOLUTION
 
@@ -191,12 +169,31 @@ Find $h^*$, the constant prediction that minimizes $R_\lambda(h)$. Show
 your work, and put a around your final answer, which should be an
 **expression in terms of $y_i$, $n$, and/or $\lambda$**.
 
-::: responsebox
-3.8in
-:::
-
 # BEGIN SOLUTION
+**Answer**: $h^* = \frac{\sum_{i = 1}^n y_i^2}{\sum_{i = 1}^n y_i + n\lambda}$
 
+
+To minimize the regularized average Ulta loss, we solve the equation by setting the derivative to zero and solving for $h$.
+
+Set the derivative to zero:
+
+$$ \frac{\partial R_\lambda(h)}{\partial h} = 0 $$
+
+$$ -2 \left( \frac{1}{n} \sum_{i = 1}^n y_i (y_i - h) \right) + 2\lambda h = 0 $$
+
+Simplify:
+
+$$ \frac{1}{n} \sum_{i = 1}^n y_i^2 - \frac{1}{n} \sum_{i = 1}^n y_i h - \lambda h = 0 $$
+
+Combine terms:
+
+$$ \frac{1}{n} \sum_{i = 1}^n y_i^2 = h \left( \frac{1}{n} \sum_{i = 1}^n y_i + \lambda \right) $$
+
+Solve for $h$:
+
+$$ h^* = \frac{\frac{1}{n} \sum_{i = 1}^n y_i^2}{\frac{1}{n} \sum_{i = 1}^n y_i + \lambda} $$
+
+$$ h^* = \frac{\sum_{i = 1}^n y_i^2}{\sum_{i = 1}^n y_i + n\lambda} $$
 # END SOLUTION
 
 # END SUBPROB
