--- a/problems/fa24-final/q08.md
+++ b/problems/fa24-final/q08.md
@@ -20,6 +20,22 @@ ingredients. What is the squared loss of our model's predicted number of
 ingredients for Victors' Veil? Give your answer as a **number**.
 
 # BEGIN SOLUTION
+**Answer**: $$16$$
+
+The predicted number of ingredients for Victors' Veil is calculated using the regression model: $\hat{y} = w_0^* + w_1^* x$
+
+Substituting $w_0^* = 11$, $w_1^* = \frac{1}{10}$, and $x = 40$: 
+$$
+\hat{y} = 11 + \frac{1}{10} \cdot 40 = 11 + 4 = 15
+$$
+
+The squared loss is then:
+
+$$ 
+L = (\hat{y} - y)^2 = (15 - 11)^2 = 4^2 = 16
+$$
+
+
 
 # END SOLUTION
 
@@ -32,11 +48,13 @@ $\bar y$, i.e. **without** knowing the values of $w_0^*$ and $w_1^*$?
 
 ( ) Yes; the values of $w_0^*$ and $w_1^*$ don't impact the answer to
 part (a).
-
 ( ) No; the values of $w_0^*$ and $w_1^*$ are necessary to answer part
 (a).
 
 # BEGIN SOLUTION
+**Answer**: Yes; the values of $w_0^*$ and $w_1^*$ don't impact the answer to part (a).
+
+To answer part (a), we only need to know the average values $\bar{x}$ and $\bar{y}$, as the regression line will always pass through $(\bar{x}, \bar{y})$. 
 
 # END SOLUTION
 
@@ -50,27 +68,22 @@ $i = 1, 2, ..., n$, where $n$ is the number of points in our dataset:
 
 $$u_i = - x_i$$
 
-# BEGIN SOLUTION
-
-# END SOLUTION
-
-# END SUBPROB
-
 Suppose $U$ is the design matrix for the simple linear regression model
 that uses **negative** price to predict number of ingredients. Which of
 the following matrices could be $U^TU$?
 
-+:----+:--+
-| ( ) |   |
-|     |   |
-| ( ) |   |
-|     |   |
-| ( ) |   |
-|     |   |
-| ( ) |   |
-+-----+---+
+$\begin{bmatrix} -15 & 600 \\ 600 & -30000 \end{bmatrix}$
+
+$\begin{bmatrix} 15 & -600 \\ -600 & 30000 \end{bmatrix}$
+
+$\begin{bmatrix} -15 & 450 \\ 450 & -30000 \end{bmatrix}$
+
+$\begin{bmatrix} 15 & -450 \\ -450 & 30000 \end{bmatrix}$
+
 
 # BEGIN SOLUTION
+
+**Answer**: $$\begin{bmatrix} 15 & -600 \\ -600 & 30000 \end{bmatrix}$$
 
 # END SOLUTION
 
