--- a/problems/fa24-final/q10.md
+++ b/problems/fa24-final/q10.md
@@ -30,8 +30,10 @@ example.
 # BEGIN SUBPROB
 
 How many combinations of hyperparameters are being considered?
+**Answer**: $LD$
 
 # BEGIN SOLUTION
+We have a grid with 2 features: $L$, which we use to iterate our $\lambda$ value in ridge regression, and $D$, which we use to iterate the polynomial degree for one of our hyperparameters. 
 
 # END SOLUTION
 
@@ -39,10 +41,13 @@ How many combinations of hyperparameters are being considered?
 
 # BEGIN SUBPROB
 
-(2.5 pts) **Each time** a model is trained, how many points are being
+**Each time** a model is trained, how many points are being
 used to train the model?
 
 # BEGIN SOLUTION
+**Answer**: $N \times \frac{K-1}{K}$
+
+In $K$-fold cross-validation, the data is split into $K$ folds. Each time a model is trained, one fold is used for validation, and the remaining $K-1$ folds are used for training. Since $N$ is evenly split among $K$ folds, each fold contains $\frac{N}{K}$ points. The training data, therefore, consists of $N - \frac{N}{K} = N \times \frac{K-1}{K}$ points.
 
 # END SOLUTION
 
@@ -50,11 +55,16 @@ used to train the model?
 
 # BEGIN SUBPROB
 
-(2.5 pts) **In total**, how many times are `X_train.iloc[1]` and
+**In total**, how many times are `X_train.iloc[1]` and
 `X_train.iloc[-1]` **both** used for training a model **at the same
 time**? Assume that these two points are in different folds.
 
 # BEGIN SOLUTION
+**Answer**: $LD \times (K-2)$
+
+In K-fold cross-validation, `X_{\text{train}}.\text{iloc}[1]` and `X_{\text{train}}.\text{iloc}[-1]` are in different folds and can only be used together for training when neither of their respective folds is the validation set. This happens in $(K-2)$ folds for each combination of polynomial degree ($D$) and regularization hyperparameter ($L$). Since there are $L \times D$ total combinations in the grid search, the two points are used together for training $LD \times (K-2)$ times.
+
+
 
 # END SOLUTION
 
