--- a/problems/fa24-final/q13.md
+++ b/problems/fa24-final/q13.md
@@ -1,7 +1,4 @@
 # BEGIN PROB
-
-\[(10 pts)\]
-
 Suppose we fit a logistic regression model that predicts whether a
 product is designed for sensitive skin, given its price, $x^{(1)}$,
 number of ingredients, $x^{(2)}$, and rating, $x^{(3)}$. After
@@ -28,68 +25,83 @@ Which of the following products have a predicted probability of being
 designed for sensitive skin of **at least 0.5 (50%)**? For each product,
 select Yes or No and justify your answer.
 
-:::::::::::::::: adjustwidth
--0.3in-0.3in
 
-::::::::::::::: center
-::::: minipage
-::: center
-**Wolfcare:** ( ) Yes ( ) No
-:::
 
-::: responsebox
-1.6in
-:::
-:::::
+**Wolfcare:** 
 
-::::: minipage
-::: center
-**Go Blue Glow:** ( ) Yes ( ) No
-:::
+( ) Yes 
+( ) No
 
-::: responsebox
-1.6in
-:::
-:::::
+**Justify your answer.**
 
-::::: minipage
-::: center
-**DataSPF:** ( ) Yes ( ) No
-:::
+**Go Blue Glow:** 
 
-::: responsebox
-1.6in
-:::
-:::::
+( ) Yes 
+( ) No
 
-::::: minipage
-::: center
-**Maize Mist:** ( ) Yes ( ) No
-:::
+**Justify your answer.**
 
-::: responsebox
-1.6in
-:::
-:::::
-:::::::::::::::
-::::::::::::::::
+**DataSPF:**
+
+( ) Yes 
+( ) No
+
+**Justify your answer.**
+
+**Maize Mist:** 
+
+( ) Yes 
+( ) No
+
+**Justify your answer.**
 
 # BEGIN SOLUTION
 
+In order to solve this problem, we need to use the sigmoid function to cast our result into a probability between 0-1. As a reminder, the sigmoid function $\frac{1}{1 + e^{-x}}$ trends towards 0 when the input becomes more negative, and towards 1 as the input becomes a higher positive.
+
+**Wolfcare**:
+
+$$
+z = -1 + \frac{1}{5}(15) - \frac{3}{5}(20) + 0 = -1 + 3 - 12 = -10
+$$
+$$
+P = \frac{1}{1 + e^{-(-10)}} = \frac{1}{1 + e^{10}} \approx 0
+$$
+
+**Decision: No**, as $P < 0.5$
+
+**Go Blue Glow**:
+
+$$
+z = -1 + \frac{1}{5}(25) - \frac{3}{5}(5) + 0 = -1 + 5 - 3 = 1
+$$
+$$
+P = \frac{1}{1 + e^{-1}} \approx \frac{1}{1 + 0.3679} \approx 0.73
+$$
+
+**Decision: Yes**, as $P \geq 0.5$.
+
+**DataSPF**:
+
+$$
+z = -1 + \frac{1}{5}(50) - \frac{3}{5}(15) + 0 = -1 + 10 - 9 = 0
+$$
+$$
+P = \frac{1}{1 + e^{-0}} = \frac{1}{2} = 0.5
+$$
+
+**Decision: Yes**, as $P \geq 0.5$.
+
+**Maize Mist**:
+$$
+z = -1 + \frac{1}{5}(0) - \frac{3}{5}(1) + 0 = -1 - 0.6 = -1.6
+$$
+$$
+P = \frac{1}{1 + e^{-(-1.6)}} = \frac{1}{1 + e^{1.6}} \approx \frac{1}{1 + 4.953} \approx 0.17
+$$
+**Decision: No**, as $P < 0.5$
+
+
 # END SOLUTION
-
-# END SUBPROB
-
-# BEGIN SOLUTION
-
-# END SOLUTION
-
-# END SUBPROB
-
-# BEGIN SOLUTION
-
-# END SOLUTION
-
-# END SUBPROB
 
 # END PROB
