--- a/problems/fa24-final/q14.md
+++ b/problems/fa24-final/q14.md
@@ -51,6 +51,38 @@ What is the precision of the resulting predictions? Give your answer as
 an **unsimplified fraction**.
 
 # BEGIN SOLUTION
+**Answer**: $\boxed{\frac{35}{40}}$
+The precision of a classification model is calculated as:
+
+$$
+\text{Precision} = \frac{\text{True Positives (TP)}}{\text{True Positives (TP)} + \text{False Positives (FP)}}
+$$
+
+From the confusion matrix for threshold $A$:
+
+$$
+\begin{array}{|l|c|c|}
+\hline
+& \text{Pred.} \: 0 & \text{Pred.} \: 1 \\
+\hline
+\text{Actually} \: 0 & 40 & 5 \\
+\hline
+\text{Actually} \: 1 & 35 & 35 \\
+\hline
+\end{array}
+$$
+
+The number of true positives (TP) is $35$, and the number of false positives (FP) is $5$. Substituting into the formula:
+
+$$
+\text{Precision} = \frac{35}{35 + 5} = \frac{35}{40}
+$$
+
+Thus, the precision for threshold $A$ is:
+
+$$
+\boxed{\frac{35}{40}}
+$$
 
 # END SOLUTION
 
@@ -62,6 +94,45 @@ What is the missing value (???) in the confusion matrix for threshold
 $B$? Give your answer as an **integer**.
 
 # BEGIN SOLUTION
+**Answer**: $60$
+
+From the confusion matrix for threshold $B$:
+
+$$
+\begin{array}{|l|c|c|}
+\hline
+& \text{Pred.} \: 0 & \text{Pred.} \: 1 \\
+\hline
+\text{Actually} \: 0 & 5 & 40 \\
+\hline
+\text{Actually} \: 1 & 10 & ??? \\
+\hline
+\end{array}
+$$
+
+The sum of all entries in a confusion matrix must equal the total number of samples. For thresholds $A$ and $C$, the total number of samples is:
+
+$$
+40 + 5 + 35 + 35 = 115
+$$
+
+Using this total, for threshold $B$, the entries provided are:
+
+$$
+5 (\text{TN}) + 40 (\text{FP}) + 10 (\text{FN}) + ??? (\text{TP}) = 115
+$$
+
+Solving for the missing value (???):
+
+$$
+115 - (5 + 40 + 10) = 60
+$$
+
+Thus, the missing value for threshold $B$ is:
+
+$$
+\boxed{60}
+$$
 
 # END SOLUTION
 
@@ -73,22 +144,22 @@ Using the information in the three confusion matrices, arrange the
 thresholds from **largest to smallest**. Remember that
 $0 \leq A, B, C \leq 1$.
 
-+:------------------------+:--+
-| ( ) $A$ $>$ $B$ $>$ $C$ |   |
-|                         |   |
-| ( ) $A$ $>$ $C$ $>$ $B$ |   |
-|                         |   |
-| ( ) $B$ $>$ $A$ $>$ $C$ |   |
-|                         |   |
-| ( ) $B$ $>$ $C$ $>$ $A$ |   |
-|                         |   |
-| ( ) $C$ $>$ $A$ $>$ $B$ |   |
-|                         |   |
-| ( ) $C$ $>$ $B$ $>$ $A$ |   |
-+-------------------------+---+
+( ) $A$ $>$ $B$ $>$ $C$
+( ) $A$ $>$ $C$ $>$ $B$
+( ) $B$ $>$ $A$ $>$ $C$
+( ) $B$ $>$ $C$ $>$ $A$
+( ) $C$ $>$ $A$ $>$ $B$
+( ) $C$ $>$ $B$ $>$ $A$
 
 # BEGIN SOLUTION
+Thresholds can be arranged based on their strictness. Higher thresholds result in more predictions for class 0 (more products classified as not designed for sensitive skin).
 
+From the confusion matrices:
+- Threshold $A$ predicts the least as 0 and Threshold $B$ predicts the most as 0.
+
+$$
+\boxed{A > C > B}
+$$
 # END SOLUTION
 
 # END SUBPROB
@@ -101,16 +172,8 @@ not** designed for sensitive skin. In one or two English sentences,
 explain which is **worse** in this context and **why**: a false positive
 or a false negative.
 
-::: responsebox
-1.5in
-
-A false positive is worse, as it would mean we predict a product is safe
-when it isn't; someone with sensitive skin may use it and it could harm
-them.
-:::
-
 # BEGIN SOLUTION
-
+A false positive is worse, as it would mean we predict a product is safe when it isn't; someone with sensitive skin may use it and it could harm them.
 # END SOLUTION
 
 # END SUBPROB
