--- a/problems/fa24-final/q06.md
+++ b/problems/fa24-final/q06.md
@@ -1,7 +1,5 @@
 # BEGIN PROB
 
-\]
-
 Suppose `soup` is a BeautifulSoup object representing the homepage of
 `wolfskin.com`, a Sephora competitor.
 
@@ -42,14 +40,33 @@ following options describes the source code of `wolfskin.com`?
         ...
 
 ( ) Option 1
-
 ( ) Option 2
-
 ( ) Option 3
-
 ( ) Option 4
 
 # BEGIN SOLUTION
+**Answer**: Option 2
+
+**Explanation**:
+
+The given code:
+
+`prods = [row.get("prod") for row in soup.find_all("row", class_="thing")]`
+
+retrieves all `<row>` elements with the class `"thing"` and extracts the value of the `"prod"` attribute for each.
+
+**Option 1**:
+In this structure, the product names appear as text content within the `<row>` tags, not as an attribute. `row.get("prod")` would return `None`.
+
+**Option 2**:
+Here, the product names are stored as the value of the `"prod"` attribute. `row.get("prod")` successfully retrieves these values.
+
+**Option 3**:
+In this structure, the `"prod"` attribute contains the value `"thing"`, and the product names are stored as the value of the `"class"` attribute. `soup.find_all("row", class_="thing")` will not retrieve any of these tags since there are no tags with `class="thing"`.
+
+
+**Option 4**:
+In this structure, the product names are part of the text content inside the `<row>` tags. `row.get("prod")` would return `None`.
 
 # END SOLUTION
 
