--- a/problems/fa24-final/q11.md
+++ b/problems/fa24-final/q11.md
@@ -9,9 +9,9 @@ cross-validation, we determine the average validation mean squared error
 --- which we'll refer to as AVMSE in this question --- for several
 different choices of $\lambda$. The results are given below.
 
-::: center
-![image](final-images/avmse.png){width="70%"}
-:::
+
+<center><img src="../assets/images/fa24-final/avmse.png" width=800></center>
+
 
 # BEGIN SUBPROB
 
@@ -19,14 +19,14 @@ As $\lambda$ increases, what happens to model complexity and model
 variance?
 
 ( ) Model complexity and model variance both increase.
-
 ( ) Model complexity increases while model variance decreases.
-
 ( ) Model complexity decreases while model variance increases.
-
 ( ) Model complexity and model variance both decrease.
 
 # BEGIN SOLUTION
+**Answer**: Model complexity and model variance both decrease.
+
+As $\lambda$ increases, the $L_1$ regularization penalizes the model more heavily for including features, effectively reducing the number of non-zero coefficients in the model. This decreases model complexity. Additionally, by reducing complexity, the model becomes less sensitive to the training data, leading to lower variance.
 
 # END SOLUTION
 
@@ -37,12 +37,13 @@ variance?
 What does the value $A$ on the graph above correspond to?
 
 ( ) The AVMSE of the $\lambda$ we'd choose to use to train a model.
-
 ( ) The AVMSE of an unregularized multiple linear regression model.
-
 ( ) The AVMSE of the constant model.
 
 # BEGIN SOLUTION
+**Answer**: The AVMSE of an unregularized multiple linear regression model.
+
+Point $A$ represents the case where $\lambda = 0$, meaning no regularization is applied. This corresponds to an unregularized multiple linear regression model.
 
 # END SOLUTION
 
@@ -53,12 +54,13 @@ What does the value $A$ on the graph above correspond to?
 What does the value $B$ on the graph above correspond to?
 
 ( ) The AVMSE of the $\lambda$ we'd choose to use to train a model.
-
 ( ) The AVMSE of an unregularized multiple linear regression model.
-
 ( ) The AVMSE of the constant model.
 
 # BEGIN SOLUTION
+**Answer**: The AVMSE of the $\lambda$ we'd choose to use to train a model.
+
+Point $B$ is the minimum point on the graph, indicating the optimal $\lambda$ value that minimizes the AVMSE. This is the $\lambda$ we’d choose to train the model.
 
 # END SOLUTION
 
@@ -69,18 +71,13 @@ What does the value $B$ on the graph above correspond to?
 What does the value $C$ on the graph above correspond to?
 
 ( ) The AVMSE of the $\lambda$ we'd choose to use to train a model.
-
 ( ) The AVMSE of an unregularized multiple linear regression model.
-
 ( ) The AVMSE of the constant model.
 
 # BEGIN SOLUTION
+**Answer**: The AVMSE of the constant model.
 
-# END SOLUTION
-
-# END SUBPROB
-
-# BEGIN SOLUTION
+Point $C$ represents the AVMSE when $\lambda$ is very large, effectively forcing all coefficients to zero. This corresponds to the constant model.
 
 # END SOLUTION
 
